imported some js and set up a page

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <head>
+        <title><%= title %></title>
+        <link rel='stylesheet' href='/stylesheets/style.css' />
+    </head>
+    <body>
+        <h1><%= title %></h1>
+        <ul>
+            <li>
+                <a href="/stripe">Stripe</a>
+            </li>
+        </ul>
+    </body>
 </html>
