--- a/app/views/stripe.ejs
+++ b/app/views/stripe.ejs
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script type="text/javascript" src="javascripts/lib/require.js" data-main="javascripts/stripe-main"></script>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p><%= title %> integration</p>
-  </body>
+    <head>
+        <title><%= title %></title>
+        <link rel='stylesheet' href='/stylesheets/style.css' />
+        <script type="text/javascript" src="javascripts/lib/require.js" data-main="javascripts/stripe-main"></script>
+    </head>
+    <body>
+        <h1><%= title %></h1>
+        <p><%= title %> integration</p>
+
+        <form action="" method="POST" id="payment-form">
+            <span class="payment-errors"></span>
+
+            <div class="form-row">
+                <label>
+                    <span>Card Number</span>
+                    <input type="text" size="20" data-stripe="number"/>
+                </label>
+            </div>
+
+            <div class="form-row">
+                <label>
+                    <span>CVC</span>
+                    <input type="text" size="4" data-stripe="cvc"/>
+                </label>
+            </div>
+
+            <div class="form-row">
+                <label>
+                    <span>Expiration (MM/YYYY)</span>
+                    <input type="text" size="2" data-stripe="exp-month"/>
+                </label>
+                <span> / </span>
+                <input type="text" size="4" data-stripe="exp-year"/>
+            </div>
+
+            <button type="submit">Submit Payment</button>
+        </form>
+    </body>
 </html>
