Stripe payment message

--- a/app/views/stripe.ejs
+++ b/app/views/stripe.ejs
@@ -6,8 +6,10 @@
         <script type="text/javascript" src="javascripts/lib/require.js" data-main="javascripts/stripe-main"></script>
     </head>
     <body>
-        <h1><%= title %></h1>
-        <p><%= title %> integration</p>
+        <h1><%= title %> integration</h1>
+        <p><%= message %></p>
+
+
 
         <form action="" method="POST" id="payment-form">
             <span class="payment-errors"></span>
