get user from cookie

--- a/app/views/stripe.ejs
+++ b/app/views/stripe.ejs
@@ -14,7 +14,7 @@
         <h1><%= title %> integration</h1>
         <p><%= message %></p>
 
-
+        <p class="user"></p>
 
         <form action="" method="POST" id="payment-form">
             <span class="payment-errors"></span>
