--- a/app/views/stripe.ejs
+++ b/app/views/stripe.ejs
@@ -11,6 +11,9 @@
         </style>
     </head>
     <body>
+
+        <% include partials/header %>
+
         <h1><%= title %> integration</h1>
         <p><%= message %></p>
 
