--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,10 +5,12 @@
         <link rel='stylesheet' href='/stylesheets/style.css' />
     </head>
     <body>
-        <h1><%= title %></h1>
+
+        <% include partials/header %>
+
         <ul>
             <li>
-                <a href="/stripe">Stripe</a>
+                <a href="/stripe">Stripe proto</a>
             </li>
         </ul>
     </body>
