go cardless implementation

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,6 +12,9 @@
             <li>
                 <a href="/stripe">Stripe proto</a>
             </li>
+            <li>
+                <a href="/go-cardless">Go Cardless</a>
+            </li>
         </ul>
     </body>
 </html>
