--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,3 +1,5 @@
 <header>
-    <img src="images/membership.png" alt="" />
+    <a href="/"><img src="images/membership.png" alt="" /></a>
 </header>
+
+<div class="wrapper">
