--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title><%= title %></title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
+
+        <% include partials/css %>
+
     </head>
     <body>
 
@@ -13,5 +15,8 @@
                 <a href="/stripe">Stripe proto</a>
             </li>
         </ul>
+
+        <% include partials/footer %>
+
     </body>
 </html>
