--- a/app/views/stripe.ejs
+++ b/app/views/stripe.ejs
@@ -2,13 +2,11 @@
 <html>
     <head>
         <title><%= title %></title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
+
+        <% include partials/css %>
+
         <script type="text/javascript" src="javascripts/lib/require.js" data-main="javascripts/stripe-main"></script>
-        <style type="text/css" media="screen">
-            .invalid {
-                border: 3px solid red;
-            }
-        </style>
+
     </head>
     <body>
 
@@ -19,33 +17,36 @@
 
         <p class="user"></p>
 
-        <form action="" method="POST" id="payment-form">
+        <form action="" method="POST" id="payment-form" class="form">
             <span class="payment-errors"></span>
 
             <div class="form-row">
                 <label>
                     <span>Card Number</span>
-                    <input type="text" size="20" data-stripe="number" class="cc-num"/>
+                    <input type="text" size="20" data-stripe="number" class="cc-num" placeholder="xxxx xxxx xxxx xxxx"/>
                 </label>
             </div>
 
             <div class="form-row">
                 <label>
                     <span>CVC</span>
-                    <input type="text" size="4" data-stripe="cvc" class="cc-cvc"/>
+                    <input type="text" size="4" data-stripe="cvc" class="cc-cvc" placeholder="CVC"/>
                 </label>
             </div>
 
             <div class="form-row">
                 <label>
                     <span>Expiration (MM/YYYY)</span>
-                    <input type="text" size="2" data-stripe="exp-month" class="cc-exp-month"/>
+                    <input type="text" size="2" data-stripe="exp-month" class="cc-exp-month" placeholder="MM"/>
                 </label>
                 <span> / </span>
-                <input type="text" size="4" data-stripe="exp-year" class="cc-exp-year"/>
+                <input type="text" size="4" data-stripe="exp-year" class="cc-exp-year" placeholder="YYYY"/>
             </div>
 
             <button type="submit">Submit Payment</button>
         </form>
+
+        <% include partials/footer %>
+
     </body>
 </html>
