--- a/membership/app/views/index.scala.html
+++ b/membership/app/views/index.scala.html
@@ -2,6 +2,14 @@
 
 @main("Welcome to Play") {
 
-    @play20.welcome(message)
+    <ul>
+        <li>
+            <a href="/stripe">Stripe proto</a>
+        </li>
+        <li>
+            <a href="/go-cardless">Go Cardless</a>
+        </li>
+    </ul>
+
 
 }
