--- a/membership/app/views/main.scala.html
+++ b/membership/app/views/main.scala.html
@@ -10,6 +10,12 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+
+        @partials.header()
+
         @content
+
+        @partials.footer()
+
     </body>
 </html>
