--- a/membership/app/views/main.scala.html
+++ b/membership/app/views/main.scala.html
@@ -7,7 +7,10 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/require.js")" data-main="assets/javascripts/stripe-main"></script>
+
+        <!-- <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script> -->
     </head>
     <body>
 
