--- a/membership/app/views/main.scala.html
+++ b/membership/app/views/main.scala.html
@@ -5,7 +5,7 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/head.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/require.js")" data-main="assets/javascripts/stripe-main"></script>
