--- a/membership/app/assets/stylesheets/_head.common.scss
+++ b/membership/app/assets/stylesheets/_head.common.scss
@@ -11,5 +11,12 @@
    Base
    ========================================================================== */
 
+@import "_webfonts";
+
 @import "base/_normalize";
 @import "base/_base";
+@import "base/_type";
+@import "_extends-only";
+@import "base/_links";
+@import "base/_helpers";
+@import "base/_lists";
