--- a/membership/app/views/events/eventItem.scala.html
+++ b/membership/app/views/events/eventItem.scala.html
@@ -1,10 +1,14 @@
 @(event: controllers.Application.EBEvent)
 
-    <li class="eventItem">
-        <img src="@event.logo_url" alt="Event Image" width="200px"/>
-        <h2 class="name"><a href="/eventItem/@event.id">@event.name.text</a></h2>
-        <span class="time"></span>
-        <span class="location"></span>
+    <li class="event">
+        <a href="/eventItem/@event.id">
+            <img src="@event.logo_url" alt="Event Image" width="200px"/>
+        </a>
+        <h2 class="name">
+            <a href="/eventItem/@event.id">@event.name.text</a>
+        </h2>
+        <span class="location">@event.venue.name</span>
+        <span class="time">@event.start.local</span>
     </li>
 
 
