events page and model

--- a/membership/app/assets/stylesheets/_head.common.scss
+++ b/membership/app/assets/stylesheets/_head.common.scss
@@ -11,7 +11,7 @@
    Base
    ========================================================================== */
 
-@import "_webfonts";
+//@import "_webfonts";
 
 @import "base/_normalize";
 @import "base/_base";
