--- a/membership/app/views/events/eventItem.scala.html
+++ b/membership/app/views/events/eventItem.scala.html
@@ -1,4 +1,4 @@
-@(event: controllers.Application.EBEvent)
+@(event: model.EventbriteEvent.EBEvent)
 
     <li class="event">
         <a href="/eventItem/@event.id">
