example implementation of go cardless for subscription and billing

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,7 +15,10 @@
                 <a href="/stripe">Stripe proto</a>
             </li>
             <li>
-                <a href="/go-cardless">Go Cardless</a>
+                <a href="/subscribe">Go Cardless subscribe</a>
+            </li>
+            <li>
+                <a href="/bill">Go Cardless bill</a>
             </li>
         </ul>
 
