--- a/membership/app/views/partials/footer.scala.html
+++ b/membership/app/views/partials/footer.scala.html
@@ -1,5 +1,5 @@
 </div>
 
 <footer>
-    <p>© 2014 Guardian News and Media Limited or its affiliated companies. All rights reserved.</p>
+    <p class="copy">© 2014 Guardian News and Media Limited or its affiliated companies. All rights reserved.</p>
 </footer>
