--- a/membership/app/views/index.scala.html
+++ b/membership/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String, eventsList: Seq[model.EventbriteEvent.EBEvent])
+@(message: String, eventsList: Seq[model.MembershipEvent])
 
 @main("Membership") {
 
