styling and some template changes

--- a/membership/app/assets/stylesheets/_head.common.scss
+++ b/membership/app/assets/stylesheets/_head.common.scss
@@ -20,3 +20,12 @@
 @import "base/_links";
 @import "base/_helpers";
 @import "base/_lists";
+
+/* ==========================================================================
+   Layout
+   ========================================================================== */
+
+@include grid-system;
+@import "layout/_layout";
+@include guss-row-utility;
+@include guss-columns-utility;
