--- a/membership/app/views/partials/header.scala.html
+++ b/membership/app/views/partials/header.scala.html
@@ -2,4 +2,4 @@
     <a href="/"><img src="@routes.Assets.at("images/membership.png")" alt="" /></a>
 </header>
 
-<div class="wrapper">
+<div class="wrapper gs-container">
