--- a/membership/app/views/events/eventItem.scala.html
+++ b/membership/app/views/events/eventItem.scala.html
@@ -1,14 +1,18 @@
 @(event: model.EventbriteEvent.EBEvent)
 
     <li class="event">
-        <a href="/eventItem/@event.id">
-            <img src="@event.logo_url" alt="Event Image" width="200px"/>
-        </a>
-        <h2 class="name">
-            <a href="/eventItem/@event.id">@event.name.text</a>
-        </h2>
-        <span class="location">@event.venue.name</span>
-        <span class="time">@event.start.local</span>
+        <div class="event__image">
+            <a href="/event/@event.id">
+                <img src="@event.logo_url" alt="Event Image" height="200px"/>
+            </a>
+        </div>
+        <div class="event__meta">
+            <h2 class="event__name">
+                <a href="/event/@event.id">@event.name.text</a>
+            </h2>
+            <span class="event__location">@event.venue.name</span>
+            <span class="event__time">@event.start.local</span>
+        </div>
     </li>
 
 
