--- a/membership/app/assets/stylesheets/_head.common.scss
+++ b/membership/app/assets/stylesheets/_head.common.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+// temp membership vars location
+
+$membersip-orange: rgba(255, 90, 0, 1);
+
 /* ==========================================================================
    Variables and mixins
    ========================================================================== */
