--- a/membership/app/views/events/eventItem.scala.html
+++ b/membership/app/views/events/eventItem.scala.html
@@ -3,7 +3,7 @@
     <li class="event">
         <div class="event__image">
             <a href="/event/@event.id">
-                <img src="@event.logo_url" alt="Event Image" height="200px"/>
+                <img src="@event.logo_url" alt="Event Image" height="220"/>
             </a>
         </div>
         <div class="event__meta">
