--- a/membership/app/views/events/eventPage.scala.html
+++ b/membership/app/views/events/eventPage.scala.html
@@ -4,7 +4,7 @@
 
     <div class="event">
         <div class="event__content">
-            <h1 class="event__name">@event.name.text</h1>
+            <h1 class="event__name section-header page-header">@event.name.text</h1>
 
             <div class="event__image">
                 <img src="@event.logo_url" alt="Event Image" />
