--- a/membership/app/views/partials/header.scala.html
+++ b/membership/app/views/partials/header.scala.html
@@ -1,5 +1,13 @@
 <header>
     <a href="/"><img src="@routes.Assets.at("images/membership.png")" alt="" /></a>
+
+    <div class="identity">
+        <span class="identity__notice">You are not signed in</span>
+        <span class="identity__avatar"></span>
+        <span class="identity__account"></span>
+        <span class="identity__tier"></span>
+    </div>
+
 </header>
 
 <div class="wrapper gs-container">
