--- a/membership/app/views/events/eventItem.scala.html
+++ b/membership/app/views/events/eventItem.scala.html
@@ -1,14 +1,14 @@
-@(event: model.MembershipEvent)
+@(event: model.EBEvent)
 
     <li class="event">
-        @*<a href="/eventItem/@event.id">
+        <a href="/eventItem/@event.id">
             <img src="@event.logo_url" alt="Event Image" width="200px"/>
-        </a>*@
+        </a>
         <h2 class="name">
-            <a href="/eventItem/@event.id">@event.title</a>
+            <a href="/eventItem/@event.id">@event.name.text</a>
         </h2>
-        @*<span class="location">@event.venue.name</span>*@
-        @*<span class="time">@event.start.local</span>*@
+        <span class="location">@event.venue.name</span>
+        <span class="time">@event.start.local</span>
     </li>
 
 
