--- a/membership/app/views/index.scala.html
+++ b/membership/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @main("Membership") {
 
-    <div class="events">
+    <div class="events container">
 
         <h1 class="page-header section-header">Current Events</h1>
 
