--- a/membership/app/assets/stylesheets/head.defaults.scss
+++ b/membership/app/assets/stylesheets/head.defaults.scss
@@ -4,6 +4,17 @@
 
 @import "_events";
 
+html {
+  position: relative;
+  min-height: 100%;
+
+  background: url(/assets/images/bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .wrapper {
   padding: 48px 0;
 }
@@ -11,6 +22,8 @@
 header {
   height: 90px;
   border-bottom: 1px solid $c-neutral6;
+
+  background-color: rgba(255,255,255,0.7);
 
   .identity {
     position: absolute;
@@ -20,11 +33,6 @@ header {
       @include fs-data(2);
     }
   }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
 }
 
 body {
@@ -51,6 +59,11 @@ footer {
           margin-bottom: $gs-baseline*2,
           padding-top: $gs-baseline/3
   ));
+}
+
+.container {
+  padding: $gutter;
+  background-color: rgba(255,255,255,0.7);
 }
 
 .actions {
