created new scss files and split css into them, added styles for ctaButton functionality

--- a/membership/app/assets/stylesheets/_head.common.scss
+++ b/membership/app/assets/stylesheets/_head.common.scss
@@ -1,14 +1,12 @@
 @charset "UTF-8";
 
-// temp membership vars location
-
-$membersip-orange: rgba(255, 90, 0, 1);
 
 /* ==========================================================================
    Variables and mixins
    ========================================================================== */
 
 @import "_vars";
+@import "_membership-vars";
 @import "_mixins";
 
 /* ==========================================================================
