--- a/membership/app/assets/stylesheets/head.defaults.scss
+++ b/membership/app/assets/stylesheets/head.defaults.scss
@@ -4,6 +4,8 @@
 
 @import "_events";
 
+@import "_button";
+
 .wrapper {
   padding: 48px 0;
 }
@@ -53,21 +55,3 @@ footer {
   ));
 }
 
-.actions {
-  margin: $gs-row-height 0 0 0;
-
-  .action {
-    display: inline-block;
-    margin: 0 $gutter 0 0;
-  }
-
-  .sign-in {
-    background-color: $c-brandBlue;
-    color: #FFFFFF;
-    padding: $gutter/2;
-    &:hover {
-      background-color: darken($c-brandBlue, 15%);
-      text-decoration: none;
-    }
-  }
-}
