--- a/membership/app/views/index.scala.html
+++ b/membership/app/views/index.scala.html
@@ -1,26 +1,18 @@
-@( eventsList: Seq[model.EBEvent])
-
 @main("Membership") {
 
-    <div class="events container">
+    <div class="index container">
 
-        <h1 class="page-header section-header">Current Events</h1>
+        <h1 class="section-header">Membership</h1>
 
-        <ul class="u-unstyled events__list">
-        @for(event <- eventsList) {
-            @events.eventItem(event)
-        }
+        <ul>
+            <li><a href="/events">Events</a></li>
+            <li>
+                <a href="/stripe">Stripe proto</a>
+            </li>
+            <li>
+                <a href="/go-cardless">Go Cardless</a>
+            </li>
         </ul>
     </div>
-
-
-    <ul>
-        <li>
-            <a href="/stripe">Stripe proto</a>
-        </li>
-        <li>
-            <a href="/go-cardless">Go Cardless</a>
-        </li>
-    </ul>
 
 }
