--- a/membership/app/views/events/eventPage.scala.html
+++ b/membership/app/views/events/eventPage.scala.html
@@ -1,9 +1,10 @@
 @(event: model.EBEvent)
+@import views.Crumb
 @import views.Dates._
 
 @main("Membership") {
 
-    @partials.crumb(List(List("Home", "/"), List("Events", "/events"), List(event.name.text, s"/events/${event.id}")))
+    @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events"), Crumb(event.name.text, s"/events/${event.id}")))
 
     <div class="event">
         <div class="event__content container">
