--- a/membership/app/views/events/eventsIndex.scala.html
+++ b/membership/app/views/events/eventsIndex.scala.html
@@ -1,8 +1,9 @@
 @( eventsList: Seq[model.EBEvent])
+@import views.Crumb
 
 @main("Membership") {
 
-    @partials.crumb(List(List("Home", "/"), List("Events", "/events")))
+    @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events")))
 
     <div class="events container">
 
