--- a/membership/app/views/main.scala.html
+++ b/membership/app/views/main.scala.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/head.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/components/require/require.js")" data-main="assets/javascripts/main"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/components/require/require.js")" data-main="@routes.Assets.at("javascripts/main")"></script>
 
         <!-- <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script> -->
     </head>
