removed jquery dependency for stripe, removed stripe.payment file, added in validation for stripe form, added in form css, updated stripe form

--- a/app/views/stripe.scala.html
+++ b/app/views/stripe.scala.html
@@ -2,35 +2,42 @@
 
     <h1>Stripe integration</h1>
 
-    <p class="user"></p>
+    <p class="user">No user Cookie Information</p>
 
     <form action="" method="POST" id="payment-form" class="form">
-        <span class="payment-errors"></span>
+        <fieldset class="fieldset">
+            <span class="payment-errors"></span>
+            <div class="form-field">
+                <label class="label" for="cc-num">
+                    <span>Card Number</span>
+                    <input type="tel" size="20" data-stripe="number" class="cc-num text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx"/>
+                </label>
+                <p class="error--card-number error hide">Please enter a valid card number</p>
+            </div>
 
-        <div class="form-row">
-            <label>
-                <span>Card Number</span>
-                <input type="text" size="20" data-stripe="number" class="cc-num" placeholder="xxxx xxxx xxxx xxxx"/>
-            </label>
-        </div>
+            <div class="form-field">
+                <label class="label" for="cc-cvc">
+                    <span>CVC</span>
+                    <input type="tel" size="4" data-stripe="cvc" class="cc-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC"/>
+                </label>
+                <p class="error--card-cvc error hide">Please enter a valid CVC number</p>
+            </div>
 
-        <div class="form-row">
-            <label>
-                <span>CVC</span>
-                <input type="text" size="4" data-stripe="cvc" class="cc-cvc" placeholder="CVC"/>
-            </label>
-        </div>
+            <div class="form-field">
+                <label class="label" for="cc-exp-month">
+                    <span>Expiration (MM/YYYY)</span>
+                    <p>
+                        <input type="tel" size="2" data-stripe="exp-month" class="cc-exp-month text-input text-input--small" id="cc-exp-month" placeholder="MM"/>
+                        <span> / </span>
+                        <input type="tel" size="4" data-stripe="exp-year" class="cc-exp-year text-input text-input--small" placeholder="YYYY"/>
+                    </p>
+                </label>
+                <p class="error--card-expiry error hide">Please enter a valid Expiry</p>
+            </div>
 
-        <div class="form-row">
-            <label>
-                <span>Expiration (MM/YYYY)</span>
-                <input type="text" size="2" data-stripe="exp-month" class="cc-exp-month" placeholder="MM"/>
-            </label>
-            <span> / </span>
-            <input type="text" size="4" data-stripe="exp-year" class="cc-exp-year" placeholder="YYYY"/>
-        </div>
+            <button type="submit" class="submit-input">Submit Payment</button>
 
-        <button type="submit">Submit Payment</button>
+        </fieldset>
     </form>
 
 }
