--- a/common/app/assets/stylesheets/_head.common.scss
+++ b/common/app/assets/stylesheets/_head.common.scss
@@ -21,6 +21,7 @@
 @import "base/links";
 @import "base/helpers";
 @import "base/lists";
+@import "base/forms";
 
 /* ==========================================================================
    Layout
