--- a/app/views/events/eventItem.scala.html
+++ b/app/views/events/eventItem.scala.html
@@ -4,7 +4,7 @@
     <li class="event">
         <div class="event__image">
             <a href="/event/@event.id">
-                <img src="@event.logo_url" alt="Event Image" height="220"/>
+                <img src="@event.logo_url" alt="Event Image"/>
             </a>
         </div>
         <div class="event__meta">
