--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,6 +19,7 @@
 
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/head.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/webfonts.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/requirejs/require.js")" data-main="@routes.Assets.at("javascripts/main")"></script>
