WIP commits for css

--- a/app/views/events/eventsIndex.scala.html
+++ b/app/views/events/eventsIndex.scala.html
@@ -5,7 +5,7 @@
 
     @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events")))
 
-    <div class="events container">
+    <div class="events">
 
         <h1 class="page-header section-header">Current Events</h1>
 
