--- a/common/app/assets/stylesheets/_events.scss
+++ b/common/app/assets/stylesheets/_events.scss
@@ -70,6 +70,11 @@ li.event {
 /* ==========================================================================
    An event on an event page
    ========================================================================== */
+.container {
+    padding: $gutter;
+    background-color: $mem-trans-white;
+}
+
 div.event {
     .event__content {
 
