--- a/app/views/events/eventPage.scala.html
+++ b/app/views/events/eventPage.scala.html
@@ -1,7 +1,7 @@
 @(event: model.EBEvent)
 @import views.Crumb
-@import views.Cost
 @import views.Dates._
+@import org.joda.time.Instant
 
 @main("Membership") {
 
@@ -14,10 +14,10 @@
             <div class="event__tickets">
                 <div class="js-datetime-enhance">
                     <span class="event__sale_ends_note js-datetime-enhance-note">Sales end at </span>
-                    <span class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticket_classes.head.sales_end">@event.ticket_classes.head.sales_end.pretty</span>
+                    <span class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None))).head.sales_end.getOrElse("")">@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None))).head.sales_end.getOrElse(RichInstant(new Instant()).pretty)</span>
                 </div>
 
-                <span class="event__price">@event.ticket_classes.head.cost.getOrElse(model.EBPricing("GBP", "Free", 0)).display</span>
+                <span class="event__price">@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None))).head.cost.getOrElse(model.EBPricing("GBP", "Free", 0)).display</span>
                 <span class="event__price-note"> per ticket.</span>
             </div>
 
