--- a/app/views/events/eventItem.scala.html
+++ b/app/views/events/eventItem.scala.html
@@ -1,19 +1,26 @@
 @(event: model.EBEvent)
 @import views.Dates._
 
-    <li class="event">
-        <div class="event__image">
-            <a href="/event/@event.id">
-                <img src="@event.logo_url" alt="Event Image"/>
-            </a>
-        </div>
-        <div class="event__meta">
-            <h2 class="event__name">
-                <a href="/event/@event.id">@event.name.text.take(32).concat("...")</a>
-            </h2>
-            <span class="event__location">@event.venue.name</span>
-            <span class="event__time">@event.start.pretty</span>
+    <li class="facia-slice__item facia-slice__item--volume-0 l-row__item">
+        <div class="item item--has-discussion item--has-image item--imageadjust-default tone-news">
+            <div class="item__container">
+                <a href="/event/@event.id" class="item__link tone-accent-border" data-link-name="article">
+                    <div class="item__media-wrapper">
+                        <div class="item__image-container u-responsive-ratio js-image-upgrade ">
+                            <img src="@event.logo_url" class="responsive-img" alt="Event Image"></div>
+                    </div>
+                    <h2 class="item__title">
+                        @event.name.text.take(32).concat("...")
+                    </h2>
+                </a>
+                <div class="item__meta">
+                    <time class="item__timestamp js-item__timestamp" itemprop="datePublished" datetime="2014-05-09T11:47:24+0000" data-timestamp="1399636044000" data-relativeformat="short">
+                        <i class="i i-clock-light-grey"></i>
+                        <span class="timestamp__text" title="Published: 9 May 2014">2h</span>
+                        <span class="event__location">@event.venue.name</span>
+                        <span class="event__time">@event.start.pretty</span>
+                    </time>
+                </div>
+            </div>
         </div>
     </li>
-
-
