--- a/app/views/events/eventPage.scala.html
+++ b/app/views/events/eventPage.scala.html
@@ -29,7 +29,7 @@
                 <p class="event__location">@event.venue.name</p>
                 <p class="event__time">@event.start.pretty</p>
 
-                <div class="event__description">@Html(event.description.html)</div>
+                <div class="event__description">@Html(event.description.getOrElse(model.EBRichText("foobar", "foobarhtml")).html)</div>
             </div>
 
             <div class="actions">
