--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,6 +18,7 @@
         -->
 
         <title>@title</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/global.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/head.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/webfonts.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
