--- a/common/app/assets/stylesheets/head.defaults.scss
+++ b/common/app/assets/stylesheets/head.defaults.scss
@@ -8,12 +8,7 @@
 html {
     position: relative;
     min-height: 100%;
-
-    background: url(/assets/images/bg.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color: #eee;
 }
 
 .wrapper {
